add comment post router
