# app.ts
@@ -19,6 +19,8 @@ import userRouter from "@router/user";
 import mediaRouter from "@router/media";
 import tagRouter from "@router/tag";
 import postRouter from "@router/post";
+import commentRouter from "router/post_comment";
+
 import { ValidationError } from "@models/ValidationError";
 import morgan from "morgan";
 import { DBError } from "@models/DBError";
@@ -53,6 +55,7 @@ const runServer = async () => {
     app.use("/media", mediaRouter);
     app.use("/tag", tagRouter);
     app.use("/post", postRouter);
+    app.use("/comment", commentRouter);
 
     app.get("/hello", (req, res) => {
       res.json({ mes: "xxx" });
